...
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:padding="10dp"
                        android:text="Autoplay " />

                    <Button
                        android:id="@+id/shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableLeft="@drawable/ic_shuffle_black_24dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="30dp"
...
