...
            android:paddingLeft="15dp"
            android:gravity="left"
            android:text=""
            android:textSize="13sp" />

        <ImageButton
            android:id="@+id/button_prev"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:src="@drawable/ic_skip_prev_big" />
...
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_button" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:src="@drawable/ic_skip_big" />
...
