<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/library_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></ListView>
</LinearLayout>

